added site-types CSV and set up SKOS build process
in order to keep a common build pattern, also renamed the query for
constructing the located sites RDF

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
-/data/located-sites/located-sites.ttl
-tools/sparql-anything/*
-!tools/sparql-anything/Makefile
+/tools/sparql-anything/*
+!/tools/sparql-anything/Makefile
+/data/*/input.csv
+/graph/*.ttl
