switch to faster jena host

--- a/tools/jena/Makefile
+++ b/tools/jena/Makefile
@@ -1,6 +1,6 @@
 SHELL := /usr/bin/env bash
 .SHELLFLAGS := -O extglob -c
-JENA_HOST := https://archive.apache.org/dist/jena/binaries
+JENA_HOST := https://dlcdn.apache.org/jena/binaries
 JENA_VERSION := 5.3.0
 
 .PHONY: all clean
