--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,14 @@
 /tools/sparql-anything/*
 !/tools/sparql-anything/Makefile
+/tools/skos-play/*
+!/tools/skos-play/Makefile
 /tools/jena/*
 !/tools/jena/Makefile
 /tools/geosparql/*
 !/tools/geosparql/Makefile
 /data/*/input.csv
 /graph/*.ttl
+.DS_Store
+.*-debug.xml
+/alignment-cache/
+/kos/
