--- a/snowman/views.yaml
+++ b/snowman/views.yaml
@@ -1,6 +1,9 @@
 views:
+  - output: "sites.json"
+    query: "sites.rq"
+    template: "items.json"
+    unsafe: true
   - output: "index.html"
-    query: "site-types.rq"
     template: "index.html"
   - output: "site-type/{{id}}.html"
     query: "site-types.rq"
