Switch to using our own fork of sparql anything

--- a/tools/sparql-anything/Makefile
+++ b/tools/sparql-anything/Makefile
@@ -1,7 +1,7 @@
 SHELL := /usr/bin/env bash
 .SHELLFLAGS := -O extglob -c
-SA_HOST := https://github.com/SPARQL-Anything/sparql.anything/releases/download
-SA_VERSION := 0.9.0
+SA_BIN := ./repo/sparql-anything-cli/target/sparql-anything-1.0.0-SNAPSHOT-geosparql.jar
+SA_REPO := /repo
 
 .PHONY: all clean
 
@@ -10,5 +10,12 @@ all: sparql-anything.jar
 clean:
 	rm -rf !(Makefile)
 
-sparql-anything.jar:
-	curl -L $(SA_HOST)/$(SA_VERSION)/sparql-anything-$(SA_VERSION).jar > $@
+sparql-anything.jar: $(SA_BIN)
+	cp $< $@
+
+$(SA_REPO):
+	git submodule update --init --remote
+
+$(SA_BIN): $(SA_REPO)
+	cd repo; \
+	mvn clean -pl /sparql-anything-cli install -DskipTests -Dgenerate-cli-jar-geosparql=true
