set up basic site structure

--- a/snowman/views.yaml
+++ b/snowman/views.yaml
@@ -5,6 +5,27 @@ views:
     unsafe: true
   - output: "index.html"
     template: "index.html"
-  - output: "site-type/{{id}}.html"
+  - output: "site-types/index.html"
+    query: "site-types.rq"
+    template: "site-types.html"
+  - output: "site-types/{{id}}.html"
     query: "site-types.rq"
     template: "site-type.html"
+  - output: "ceramic-types/index.html"
+    query: "ceramic-types.rq"
+    template: "ceramic-types.html"
+  - output: "ceramic-types/{{id}}.html"
+    query: "ceramic-types.rq"
+    template: "ceramic-type.html"
+  - output: "roman-provinces/index.html"
+    # query: "roman-provinces.rq"
+    template: "roman-provinces.html"
+  - output: "roman-provinces/{{id}}.html"
+    # query: "roman-provinces.rq"
+    template: "roman-province.html"
+  - output: "municipalities/index.html"
+    # query: "municipalities.rq"
+    template: "municipalities.html"
+  - output: "municipalities/{{id}}.html"
+    # query: "municipalities.rq"
+    template: "municipality.html"
