Only run on main branch push

--- a/.github/workflows/validate_rdf.yml
+++ b/.github/workflows/validate_rdf.yml
@@ -1,6 +1,9 @@
 name: Validate RDF
 run-name: ${{ github.actor }} is valdating generated RDF data
-on: [push]
+on: 
+  push:
+    branches:
+      - main
 jobs:
   Validate-RDF:
     runs-on: ubuntu-latest
