--- a/tools/sparql-anything/.gitmodules
+++ b/tools/sparql-anything/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Sparql-Anything"]
-	path = tools/sparql-anything/repo
+        path = repo
 	url = https://github.com/dkglab/sparql.anything
