--- a/tools/sparql-anything/Makefile
+++ b/tools/sparql-anything/Makefile
@@ -1,24 +1,14 @@
 SHELL := /usr/bin/env bash
 .SHELLFLAGS := -O extglob -c
-SA_BIN := ./repo/sparql-anything-cli/target/sparql-anything-1.0.0-SNAPSHOT-geosparql.jar
+SA_HOST := https://github.com/dkglab/sparql.anything/releases/download
+SA_VERSION := 1.0.0-SNAPSHOT
 
 .PHONY: all clean
 
 all: sparql-anything.jar
 
 clean:
-	rm -rf !(Makefile|.gitmodules)
+	rm -rf !(Makefile)
 
-sparql-anything.jar: $(SA_BIN)
-	cp $< $@
-
-repo:
-	git submodule update --init --remote
-
-$(SA_BIN): repo
-	cd repo && \
-	mvn clean \
-	--projects /sparql-anything-cli \
-	install \
-	-DskipTests \
-	-Dgenerate-cli-jar-geosparql=true
+sparql-anything.jar:
+	curl -L $(SA_HOST)/v$(SA_VERSION)/sparql-anything-$(SA_VERSION)-geosparql.jar > $@
