--- a/.gitignore
+++ b/.gitignore
@@ -3,14 +3,13 @@
 /tools/jena/*
 !/tools/jena/Makefile
 /tools/sis/*
-!tools/sis/Makefile
+!/tools/sis/Makefile
 /tools/skos-play/*
 !/tools/skos-play/Makefile
 /tools/snowman/*
-!tools/snowman/Makefile
+!/tools/snowman/Makefile
 /tools/sparql-anything/*
 !/tools/sparql-anything/Makefile
-!/tools/sparql-anything/.gitmodules
 .*-debug.xml
 .DS_Store
 /alignment-cache/
