--- a/.github/workflows/validate_rdf.yml
+++ b/.github/workflows/validate_rdf.yml
@@ -1,5 +1,4 @@
-name: Validate RDF
-run-name: ${{ github.actor }} is valdating generated RDF data
+name: validate RDF
 on: 
   push:
     branches:
@@ -8,7 +7,7 @@ on:
     branches:
       - main
 jobs:
-  Validate-RDF:
+  validate-rdf:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
