add skeleton for analytic sites to html site

--- a/snowman/views.yaml
+++ b/snowman/views.yaml
@@ -32,3 +32,9 @@ views:
   - output: "municipalities/{{id}}.html"
     # query: "municipalities.rq"
     template: "municipality.html"
+  - output: "analytic-regions/index.html"
+    query: "analytic-regions.rq"
+    template: "analytic-regions.html"
+  - output: "analytic-regions/{{id}}.html"
+    query: "analytic-regions.rq"
+    template: "analytic-region.html"
