--- a/webapp/Makefile
+++ b/webapp/Makefile
@@ -2,11 +2,11 @@ ESB := node_modules/.bin/esbuild
 
 .PHONY: all clean superclean
 
-MODS := long-list map-view
+MODS := list-view map-view
 TS := $(foreach m,$(MODS),src/$(m).ts)
 JS := $(foreach m,$(MODS),build/$(m).js)
 
-all : $(JS) build/maplibre-gl.css
+all : $(JS) build/maplibre-gl.css build/web_bg.wasm
 
 clean :
 	rm -rf build
@@ -14,7 +14,9 @@ clean :
 superclean : clean
 	rm -rf node_modules
 
-$(ESB) node_modules/maplibre-gl/dist/maplibre-gl.css &:
+$(ESB) \
+node_modules/maplibre-gl/dist/maplibre-gl.css \
+node_modules/oxigraph/web_bg.wasm &:
 	npm install
 
 build/%.js : build.cjs tsconfig.json $(TS) | $(ESB)
@@ -22,4 +24,9 @@ build/%.js : build.cjs tsconfig.json $(TS) | $(ESB)
 	node $<
 
 build/maplibre-gl.css : node_modules/maplibre-gl/dist/maplibre-gl.css
+	mkdir -p build
+	cp $< $@
+
+build/web_bg.wasm: node_modules/oxigraph/web_bg.wasm
+	mkdir -p build
 	cp $< $@
