--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,6 +1,8 @@
 {
   "devDependencies": {
     "@types/geojson": "^7946.0.16",
+    "@typescript-eslint/eslint-plugin": "^8.26.0",
+    "@typescript-eslint/parser": "^8.26.0",
     "esbuild": "^0.25.0",
     "eslint": "^9.21.0",
     "prettier": "^3.5.3",
@@ -10,10 +12,9 @@
   "dependencies": {
     "@lit-labs/virtualizer": "^2.1.0",
     "@turf/bbox": "^7.2.0",
-    "@typescript-eslint/eslint-plugin": "^8.26.0",
-    "@typescript-eslint/parser": "^8.26.0",
     "lit": "^3.2.1",
     "maplibre-gl": "^5.2.0",
+    "oxigraph": "^0.4.9",
     "pmtiles": "^4.3.0"
   },
   "prettier": {
