Add initial snowman template for municipalities

--- a/snowman/views.yaml
+++ b/snowman/views.yaml
@@ -23,10 +23,10 @@ views:
     # query: "roman-provinces.rq"
     template: "roman-province.html"
   - output: "municipalities/index.html"
-    # query: "municipalities.rq"
+    query: "municipalities.rq"
     template: "municipalities.html"
   - output: "municipalities/{{id}}.html"
-    # query: "municipalities.rq"
+    query: "municipalities.rq"
     template: "municipality.html"
   - output: "analytic-regions/index.html"
     query: "analytic-regions.rq"
