--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "@types/geojson": "^7946.0.16",
+    "@types/wellknown": "^0.5.8",
     "@typescript-eslint/eslint-plugin": "^8.26.0",
     "@typescript-eslint/parser": "^8.26.0",
     "esbuild": "^0.25.0",
@@ -15,7 +16,8 @@
     "lit": "^3.2.1",
     "maplibre-gl": "^5.2.0",
     "oxigraph": "^0.4.9",
-    "pmtiles": "^4.3.0"
+    "pmtiles": "^4.3.0",
+    "wellknown": "^0.5.0"
   },
   "prettier": {
     "semi": false
