Updated Roman provinces queries, templates, and views

--- a/snowman/views.yaml
+++ b/snowman/views.yaml
@@ -17,10 +17,10 @@ views:
     query: "ceramic-types.rq"
     template: "ceramic-type.html"
   - output: "roman-provinces/index.html"
-    # query: "roman-provinces.rq"
+    query: "roman-provinces.rq"
     template: "roman-provinces.html"
   - output: "roman-provinces/{{id}}.html"
-    # query: "roman-provinces.rq"
+    query: "roman-provinces.rq"
     template: "roman-province.html"
   - output: "municipalities/index.html"
     query: "municipalities.rq"
