--- a/webapp/tsconfig.json
+++ b/webapp/tsconfig.json
@@ -1,17 +1,25 @@
 {
   "compilerOptions": {
-    "esModuleInterop": true,
-    "experimentalDecorators": true,
-    "forceConsistentCasingInFileNames": true,
-    "isolatedModules": true,
-    "module": "es2020",
-    "moduleResolution": "bundler",
-    "plugins": [{"name": "typescript-eslint-language-service"}],
-    "skipLibCheck": true,
+    "target": "ES2019",
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "lib": ["ES2019", "DOM", "DOM.Iterable"],
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
+    "inlineSources": true,
+    "outDir": "./dist",
+    "rootDir": "./src",
     "strict": true,
-    "target": "esnext",
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "experimentalDecorators": true,
     "useDefineForClassFields": false,
-    "verbatimModuleSyntax": true
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true
   },
-  "include": ["src/*.ts", "src/types/*.d.ts", "src/queries/*.rq"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "dist"]
 }
