--- a/webapp/tsconfig.json
+++ b/webapp/tsconfig.json
@@ -13,5 +13,5 @@
     "useDefineForClassFields": false,
     "verbatimModuleSyntax": true
   },
-  "include": ["src/*.ts", "src/types/*.d.ts", "src/queries/*.rq"]
+  "include": ["src/*.ts", "src/types/*.d.ts", "src/queries/*.rq", "src/query/*.ts"]
 }
