Update the branch of maps-webapp

--- a/webapp/Makefile
+++ b/webapp/Makefile
@@ -9,24 +9,24 @@ JS := $(foreach m,$(MODS),build/$(m).js)
 all : $(JS) build/maplibre-gl.css build/web_bg.wasm
 
 clean :
-	rm -rf build
+    rm -rf build
 
 superclean : clean
-	rm -rf node_modules
+    rm -rf node_modules
 
 $(ESB) \
 node_modules/maplibre-gl/dist/maplibre-gl.css \
 node_modules/oxigraph/web_bg.wasm &:
-	@npm install --silent --no-progress
+    npm install --silent --no-progress
 
 build/%.js : build.cjs tsconfig.json $(TS) | $(ESB)
-	mkdir -p build
-	node $<
+    mkdir -p build
+    node $
 
 build/maplibre-gl.css : node_modules/maplibre-gl/dist/maplibre-gl.css
-	mkdir -p build
-	cp $< $@
+    mkdir -p build
+    cp $< $@
 
 build/web_bg.wasm: node_modules/oxigraph/web_bg.wasm
-	mkdir -p build
-	cp $< $@
+    mkdir -p build
+    cp $< $@
