--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,14 +1,9 @@
 {
-  "devDependencies": {
-    "@types/geojson": "^7946.0.16",
-    "@types/wellknown": "^0.5.8",
-    "@typescript-eslint/eslint-plugin": "^8.26.0",
-    "@typescript-eslint/parser": "^8.26.0",
-    "esbuild": "^0.25.0",
-    "eslint": "^9.21.0",
-    "prettier": "^3.5.3",
-    "typescript": "^5.8.2",
-    "typescript-eslint-language-service": "^5.0.5"
+  "name": "webapp",
+  "version": "1.0.0",
+  "description": "Web application for ceramic distribution visualization",
+  "scripts": {
+    "build": "node build.cjs"
   },
   "dependencies": {
     "@lit-labs/virtualizer": "^2.1.0",
@@ -19,7 +14,15 @@
     "pmtiles": "^4.3.0",
     "wellknown": "^0.5.0"
   },
-  "prettier": {
-    "semi": false
+  "devDependencies": {
+    "@types/geojson": "^7946.0.16",
+    "@types/wellknown": "^0.5.8",
+    "@typescript-eslint/eslint-plugin": "^8.26.0",
+    "@typescript-eslint/parser": "^8.26.0",
+    "esbuild": "^0.25.0",
+    "eslint": "^9.21.0",
+    "prettier": "^3.5.3",
+    "typescript": "^5.8.2",
+    "typescript-eslint-language-service": "^5.0.5"
   }
 }
